dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/timer.h)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(drag, 1.3)
AM_CONFIG_HEADER(src/config.h)

DRAG_WITH_CC
DRAG_WITH_EXTRA_CPPFLAGS
DRAG_WITH_EXTRA_CFLAGS
DRAG_WITH_EXTRA_LDFLAGS
DRAG_WITH_EXTRA_LIBS
DRAG_WITH_GCC_FLAGS

DRAG_ENABLE_FFTTEST
DRAG_ENABLE_TCPTEST
AM_CONDITIONAL(FFTTEST, test x$ffttest = xtrue)
AM_CONDITIONAL(TCPTEST, test x$tcptest = xtrue)
AM_CONDITIONAL(FFTTCPTEST, test x$ffttest = xtrue -a x$tcptest = xtrue )

DRAG_WITH_CUDA_PREFIX
AM_CONDITIONAL(ENABLECUDA, test x${cudatest} = xtrue )

AC_DEFINE_UNQUOTED(BUILD_SYSTEM_TYPE, "$build")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_LN_S

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h malloc.h getopt.h netdb.h)
AC_CHECK_HEADERS(sys/types.h sys/time.h sys/socket.h arpa/inet.h)
AC_CHECK_HEADERS(fftw3.h, break)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
DRAG_TYPE_SOCKLEN_T
AC_HEADER_TIME
AC_CHECK_SIZEOF(int, 0)
AC_CHECK_SIZEOF(long long, 0)
        
dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_CHECK_LIB(m, sin)
AC_CHECK_FUNCS(gettimeofday)
AC_CHECK_FUNCS(BSDgettimeofday)
AC_CHECK_FUNCS(gethrtime)
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(valloc)
AC_SEARCH_LIBS(fftwf_execute, fftw3f, ,
  AC_MSG_ERROR([FFTW must be properly installed.]), -lm)
DRAG_SFFTW_WORKS
AC_SEARCH_LIBS(socket, socket)
AC_SEARCH_LIBS(inet_addr, xnet)

dnl Add gcc specific flags --- must be done at end or tests will break!
if test "$GCC" = yes; then
  CFLAGS="$CFLAGS $drag_gcc_flags"
fi

AC_OUTPUT(src/Makefile Makefile)
